--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -1,42 +1,56 @@
-/* 
-MIT License
-
-Copyright (c) 2018 Neutralinojs
-
-Permission is hereby granted, free of charge, to any person obtaining a copy
-of this software and associated documentation files (the "Software"), to deal
-in the Software without restriction, including without limitation the rights
-to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
-copies of the Software, and to permit persons to whom the Software is
-furnished to do so, subject to the following conditions:
-
-The above copyright notice and this permission notice shall be included in all
-copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
-SOFTWARE. */
-
-#neutralinoapp {
-    text-align: center;
-    color: white;
-}
-#neutralinoapp h1{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 20px;
-    color: #000000;
-}
-#neutralinoapp a {
-    margin-left: 12px;
-}
-#neutralinoapp span {
-    font-size: 12px;
-    font-weight: normal;
-}
 body {
-    background-color: black;
+  background-color: #effad3;
+}
+.wrapper {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+form {
+  background-color: #2d6187;
+  padding: 1em 2em;
+  border-radius: 10px;
+  width: 90%;
+  max-width: 500px;
+  min-height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.code-box {
+  padding: 0.5em;
+  font-size: 1.2rem;
+  flex: 1;
+  border: none;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+}
+.btn-send {
+  cursor: pointer;
+  padding: 0.5em 1.5em;
+  background-color: #a8dda8;
+  font-size: 1.2rem;
+  color: #333;
+  border: none;
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+}
+
+@media only screen and (max-width: 600px) {
+  form {
+    flex-direction: column;
+    justify-content: space-evenly;
+  }
+  .code-box {
+    width: 100%;
+    height: 40px;
+    border-radius: 5px;
+    flex: none;
+  }
+  .btn-send {
+    border-radius: 5px;
+    padding: 0.5em 3em;
+  }
 }
